--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </header>
     <main>
         <section class="title">
+            <div class="container">
             <h1 class="title-first">Эффективные решения <br />для вашего бизнеса</h1>
             <button type="button" class="btn">Заказать услугу</button>
+            </div>
         </section>
         <section class="list-desc section">
             <div class="container">
