--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
                     </div>
                 </li>
             </ul>
+        </section>
+        <section class="section regular-customers">
+            <div class="container">
+            <h2>Постоянные клиенты</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            </div>
         </section>  
     </main>
     <footer class="main-footer">
