--- a/index.html
+++ b/index.html
@@ -123,14 +123,26 @@
         </section>
         <section class="section regular-customers">
             <div class="container">
-            <h2>Постоянные клиенты</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <h2 class="title-regular-customers">Постоянные клиенты</h2>
+            <ul class="customers">
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
+                <li class="imegs-regular-customers"><img src="" alt="" 
+                    width="170" 
+                    height="92"/></li>
             </ul>
             </div>
         </section>  
