--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
             <div class="container">
             <h2 class="title-regular-customers">Постоянные клиенты</h2>
             <ul class="customers">
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client1.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client2.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client3.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client4.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client5.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
-                <li class="imegs-regular-customers"><img src="" alt="" 
+                <li class="imegs-regular-customers"><img src="./img/Client6.jpg" alt="" 
                     width="170" 
                     height="92"/></li>
             </ul>
