--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <div class="container">
             <h2 hidden>Особенности</h2>
             <ul class="list-item-desc">
-                <li class="list-title">
+                <li class="list-title antenna">
                     <h3 class="h3-list-title">Внимание к деталям</h3>
                     <p class="p-list-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="list-title">
+                <li class="list-title clock">
                     <h3 class="h3-list-title">Пунктуальность</h3>
                     <p class="p-list-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="list-title">
+                <li class="list-title diagram">
                     <h3 class="h3-list-title">Планирование</h3>
                     <p class="p-list-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="list-title" >
+                <li class="list-title astronaut" >
                     <h3 class="h3-list-title">Современные технологии</h3>
                     <p class="p-list-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
