вставила svg секция5

--- a/index.html
+++ b/index.html
@@ -125,29 +125,41 @@
             <div class="container">
             <h2 class="title-regular-customers">Постоянные клиенты</h2>
             <ul class="customers">
-                <li class="imegs-regular-customers"><img src="./img/Client1.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo1.svg"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="imegs-regular-customers"><img src="./img/Client2.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo2.svg"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="imegs-regular-customers"><img src="./img/Client3.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo3.svg"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="imegs-regular-customers"><img src="./img/Client4.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo4.svg"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="imegs-regular-customers"><img src="./img/Client5.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo5.svg"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="imegs-regular-customers"><img src="./img/Client6.jpg" alt="" 
-                    width="170" 
-                    height="92"/>
+                <li class="imegs-regular-customers">
+                    <a href="" class="client-link">
+                        <svg class="client-icon"><use href="./img/Logo6.svg"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
             </div>
