--- a/index.html
+++ b/index.html
@@ -42,20 +42,40 @@
             <h2 hidden>Особенности</h2>
             <ul class="list-item-desc">
                 <li class="list-title antenna">
+                    <div class="antenna-title">
+                        <svg class="list-item-desc-icon" width="70" height="70">
+                            <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
                     <h3 class="h3-list-title">Внимание к деталям</h3>
                     <p class="p-list-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </div>
                 </li>
                 <li class="list-title clock">
+                    <div class="clock-title">
+                        <svg class="list-item-desc-icon" width="70" height="70">
+                            <use href="./img/symbol-defs.svg#icon-clock"></use>
+                        </svg>
                     <h3 class="h3-list-title">Пунктуальность</h3>
                     <p class="p-list-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </div>
                 </li>
                 <li class="list-title diagram">
+                    <div class="diagram-title">
+                        <svg class="list-item-desc-icon" width="70" height="70">
+                            <use href="./img/symbol-defs.svg#icon-diagram"></use>
+                        </svg>
                     <h3 class="h3-list-title">Планирование</h3>
                     <p class="p-list-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </div>
                 </li>
                 <li class="list-title astronaut" >
+                    <div class="astronaut-title">
+                        <svg class="list-item-desc-icon" width="70" height="70">
+                            <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
                     <h3 class="h3-list-title">Современные технологии</h3>
                     <p class="p-list-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </div>
                 </li>
             </ul>
             </div>
