--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
 
@@ -25,8 +25,11 @@
         </ul>
         </nav>
         <ul class="contacts">
-            <li class="item-contact"><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-            <li class="item-contact"><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+            <li class="item-contact"><a href="mailto:info@devstudio.com" class="contact"><svg class="mail-icon">
+                <use href="./img/symbol-defs.svg#icon-letter" wight="16" height="12" ></use></svg>info@devstudio.com</a></li>
+            <li class="item-contact"><a href="tel:+380961111111" class="contact"><svg class="tel-icon">
+                <use href="./img/symbol-defs.svg#icon-smartphone" wight="10" height="16"></use>
+            </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
