--- a/index.html
+++ b/index.html
@@ -150,37 +150,37 @@
             <ul class="customers">
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo1.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo2.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo3.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo4.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo5.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/Logo6.svg"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo6"></use>
                         </svg>
                     </a>
                 </li>
