--- a/index.html
+++ b/index.html
@@ -150,37 +150,37 @@
             <ul class="customers">
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo1"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo1" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo2"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo2" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo3"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo3" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo4"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo4" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo5"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo5" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo6"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo6" width="106" height="60"></use>
                         </svg>
                     </a>
                 </li>
