--- a/index.html
+++ b/index.html
@@ -119,6 +119,28 @@
                     <div class="box">
                     <h3 class="h3-list-title-name">Игорь Демьяненко</h3>
                     <p class="p-list-title-name">Product Designer</p>
+                    <ul class="social-links-list">
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-instagram2"></use>
+                            </svg> </a> 
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                            </svg> </a> 
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                            </svg> </a> 
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                            </svg> </a> 
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="list-title-imgs"><img src="./img/img2.jpg" alt=""
