--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
                     <div class="box">
                     <h3 class="h3-list-title-name">Ольга Репина</h3>
                     <p class="p-list-title-name">Frontend Developer</p>
+                    <ul class="social-links-list">
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-instagram2"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="list-title-imgs"><img src="./img/img3.jpg" alt=""
@@ -157,6 +179,28 @@
                     <div class="box">
                     <h3 class="h3-list-title-name">Николай Тарасов</h3>
                     <p class="p-list-title-name">Marketing</p>
+                    <ul class="social-links-list">
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-instagram2"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="list-title-imgs"><img src="./img/img4.jpg" alt=""
@@ -165,6 +209,28 @@
                     <div class="box">
                     <h3 class="h3-list-title-name">Михаил Ермаков</h3>
                     <p class="p-list-title-name">UI Designer</p>
+                    <ul class="social-links-list">
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-instagram2"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a>
+                        </li>
+                        <li class="social-links-item"><a href="" class="social-links-list-item">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
             </ul>
@@ -175,37 +241,37 @@
             <ul class="customers">
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon" width="41" height="47"><use href="./img/symbol-defs.svg#icon-Logo1"></use>
+                        <svg class="client-icon" width="41" height="47"><use href="./img/symbol-defs.svg#icon-logo1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo2"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-logo2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo3"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-logo3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo4"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-logo4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo5"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-logo5"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="imegs-regular-customers">
                     <a href="" class="client-link">
-                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-Logo6"></use>
+                        <svg class="client-icon"><use href="./img/symbol-defs.svg#icon-logo6"></use>
                         </svg>
                     </a>
                 </li>
@@ -214,7 +280,7 @@
         </section>  
     </main>
     <footer class="main-footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="main-footer-container">
                 <a href="/" class="logo-blue">Web<span class="logo-white">Studio</span></a>
                 <address class="adress">
@@ -225,6 +291,43 @@
                         <li class="footer-contact"><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
+            </div>
+            <div class="footer-social-container">
+                <h3 class="footer-social-title">присоединяйтесь</h3>
+                <ul class="footer-social-list">
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                        <svg class="footer-social-icon" width="20" height="20">
+                            <use href="./img/symbol-defs.svg#icon-instagram1">
+                            </use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
