--- a/portfolio.html
+++ b/portfolio.html
@@ -128,19 +128,58 @@
         </section>
     </main>
     <footer class="main-footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="main-footer-container">
                 <a href="/" class="logo-blue">Web<span class="logo-white">Studio</span></a>
                 <address class="adress">
                     <ul class="adress-list">
                         <li class="footer-contact"><a href="" class="footer-adress">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="footer-contact"><a href="mailto:info@example.com" class="footer-mail">info@example.com</a></li>
+                        <li class="footer-contact"><a href="mailto:info@example.com"
+                                class="footer-mail">info@example.com</a></li>
                         <li class="footer-contact"><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
+            <div class="footer-social-container">
+                <h3 class="footer-social-title">присоединяйтесь</h3>
+                <ul class="footer-social-list">
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-instagram1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a href="" class="footer-social-list-item-link">
+                            <svg class="footer-social-icon" width="20" height="20">
+                                <use href="./img/symbol-defs.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
     
-</body>
-</html>
+    </body>
+    
+    </html>
